--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.1"
   }
 }
