--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.5.2"
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
+    "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
